<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VideoActivity">

    <include
        android:id="@+id/custom_action_bar"
        layout="@layout/layout_video_actionbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize" />

    <com.ycbjie.webviewlib.view.X5WebView
        android:id="@+id/webview"
        android:layout_below="@id/custom_action_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarSize="3dp" />

    <RelativeLayout
        android:id="@+id/intro_panel"
        android:layout_width="match_parent"
        android:clickable="true"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha=".8"
            android:background="@color/lightgray" />

        <TextView
            android:id="@+id/intro_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/intro_video"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/iknow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/intro_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:text="@string/iknow"
            android:textColor="@color/white" />

        <CheckBox
            android:id="@+id/dont_notice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iknow"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/dont_notice"
            android:textColor="@color/white" />

        <ImageView
            android:id="@+id/arrow"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:rotation="-45"
            android:src="@drawable/intro_arrow" />
    </RelativeLayout>
</RelativeLayout>